syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";

message Product {
    string product_id = 1;
    string product_name = 2;
    string enterprise_id = 3;
    string home_page = 4;
    string address = 5;
    string phone = 6;
    string email = 7;
    string monitor_center_host = 8;
    int32 monitor_center_port = 9;
    string contacts = 10;
    string desc = 11;
}

message ProductID {
    string Product_id = 1;
}

message ProductResponse {
    ProductID product_id = 1;
    Product product = 2;

    Error error = 3; //optional
}

service ProductHandler {
    // product
    rpc CreateProduct (Product) returns (ProductResponse) {
    }

    rpc DeleteProduct (ProductID) returns (ProductResponse) {
    }

    rpc UpdateProduct (Product) returns (ProductResponse) {
    }

    rpc GetProduct (ProductID) returns (ProductResponse) {
    }
}
